Time: 9 ms (15.19%) | Memory: 45 MB (36.15%) - LeetSync